--- a/index.html
+++ b/index.html
@@ -3,45 +3,54 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Results summary component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <!-- Import the Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&display=swap" rel="stylesheet">
+  <!-- Import The CSS File -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  Your Result
-  76
-  of 100
-
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
-  Summary
-
-  Reaction
-  80 / 100
-
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue
-  
-  <div class="attribution">
+  <main>
+    <section class="Result">
+      <header>
+        <h3>Your Result</h3>
+      </header>
+      <article class="Result-Rate">
+        <h1>76</h1> <br> of 100
+      </article>
+      <article>
+        <h3>Great</h3>
+        You scored higher than 65% of the people who have taken these tests.
+      </article>
+    </section>
+    <section class="Summary">
+      <header>
+        <h3>Summary</h3>
+      </header>
+      <article class="Reaction">
+        <img src="assets/images/icon-reaction.svg" alt=""> Reaction 80 / 100
+      </article>
+      <article class="Memory">
+        <img src="assets/images/icon-memory.svg" alt=""> Memory 92 / 100
+      </article>
+      <article class="Verbal">
+        <img src="assets/images/icon-verbal.svg" alt=""> Verbal 61 / 100
+      </article>
+      <article class="Visual">
+        <img src="assets/images/icon-visual.svg" alt=""> Visual 72 / 100
+      </article>
+      <article class="Button">
+        Continue
+      </article>
+    </section>
+  </main>
+  <footer>
+    <p>
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="#">Your Name Here</a>.</p>
+  </footer>
 </body>
 </html>
