--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
         <h3>Your Result</h3>
       </header>
       <article class="Result-Rate">
-        <h1>76</h1> <br> of 100
+        <span>76</span><p>of 100</p>
       </article>
       <article>
         <h3>Great</h3>
-        You scored higher than 65% of the people who have taken these tests.
+        <p>
+        You scored higher than 65% of <br>
+         the people who have taken <br> these tests.
+         </p>
       </article>
     </section>
     <section class="Summary">
@@ -31,20 +34,20 @@
         <h3>Summary</h3>
       </header>
       <article class="Reaction">
-        <img src="assets/images/icon-reaction.svg" alt=""> Reaction 80 / 100
+        <div><img src="assets/images/icon-reaction.svg" alt=""> Reaction</div> <span>80 <span>/ 100</span></span>
       </article>
       <article class="Memory">
-        <img src="assets/images/icon-memory.svg" alt=""> Memory 92 / 100
+        <div><img src="assets/images/icon-memory.svg" alt=""> Memory</div><span>92 <span>/ 100</span></span> 
       </article>
       <article class="Verbal">
-        <img src="assets/images/icon-verbal.svg" alt=""> Verbal 61 / 100
+        <div><img src="assets/images/icon-verbal.svg" alt=""> Verbal</div><span>61 <span>/ 100</span></span> 
       </article>
       <article class="Visual">
-        <img src="assets/images/icon-visual.svg" alt=""> Visual 72 / 100
+        <div><img src="assets/images/icon-visual.svg" alt=""> Visual</div><span>72 <span>/ 100</span></span> 
       </article>
-      <article class="Button">
+      <dive class="Button">
         Continue
-      </article>
+      </div>
     </section>
   </main>
   <footer>
