--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p>
         You scored higher than 65% of <br>
          the people who have taken <br> these tests.
-         </p>
+        </p>
       </article>
     </section>
     <section class="Summary">
@@ -53,7 +53,7 @@
   <footer>
     <p>
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.</p>
+    Coded by <a href="https://www.frontendmentor.io/profile/omarsaleh1">Omar</a>.</p>
   </footer>
 </body>
 </html>
